Changed layout of Home page, fixed overflow and horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  overflow: hidden;
+  overflow-x: hidden;
   height:100vh;
 }
 
